Add EchoServer for socket demo