@@ -6,10 +6,11 @@ import java.nio.MappedByteBuffer;
 import java.nio.channels.FileChannel;
 import java.nio.file.OpenOption;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class MemMapDemo {
     public static void main(String[] args) throws IOException {
-        FileChannel fileChannel = FileChannel.open(Path.of("text.txt"));
+        FileChannel fileChannel = FileChannel.open(Paths.get("text.txt"));
         MappedByteBuffer byteBuffer = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0, fileChannel.size());
 
         ByteBuffer byteBuffer1 = ByteBuffer.allocate(1024);
